Adjusted output name on csv file.

--- a/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
+++ b/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing ./.cache/pip/wheels/ff/d5/7b/f1fb4e1e1603b2f01c2424dd60fbcc50c12ef918bafc44b155/nltk-3.5-py3-none-any.whl\n",
-      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\n",
+      "Collecting nltk\n",
+      "  Downloading nltk-3.5.zip (1.4 MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.4 MB 820 kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
       "Requirement already satisfied: joblib in /opt/conda/lib/python3.8/site-packages (from nltk) (0.17.0)\n",
-      "Requirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
       "Collecting regex\n",
-      "  Using cached regex-2020.11.13-cp38-cp38-manylinux2014_x86_64.whl (738 kB)\n",
+      "  Downloading regex-2020.11.13-cp38-cp38-manylinux2014_x86_64.whl (738 kB)\n",
+      "\u001b[K     |████████████████████████████████| 738 kB 800 kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\n",
+      "Building wheels for collected packages: nltk\n",
+      "  Building wheel for nltk (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for nltk: filename=nltk-3.5-py3-none-any.whl size=1434674 sha256=bfd49ccbc6940a423289fb7d185989ec5db9213ddbacf05fc1bc9e47c38bcd00\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/ff/d5/7b/f1fb4e1e1603b2f01c2424dd60fbcc50c12ef918bafc44b155\n",
+      "Successfully built nltk\n",
       "Installing collected packages: regex, nltk\n",
       "Successfully installed nltk-3.5 regex-2020.11.13\n"
      ]
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,11 +52,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nltk import word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package tagsets to /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Unzipping help/tagsets.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('tagsets')"
    ]
   },
   {
@@ -60,8 +96,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package tagsets to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package tagsets is already up-to-date!\n"
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
      ]
     },
     {
@@ -76,42 +113,12 @@
     }
    ],
    "source": [
-    "nltk.download('tagsets')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "nltk.download('averaged_perceptron_tagger')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -490,9 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1499,7 +1514,7 @@
        " ...]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,13 +1526,15 @@
     "# tokenized_words = word_tokenize(text_with_lower_case, language='english')\n",
     "#\n",
     "\n",
+    "nltk.download('punkt')\n",
+    "\n",
     "tokenized_words = word_tokenize(file_contents, language='english')\n",
     "tokenized_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2543,7 @@
        " ...]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2540,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2566,7 @@
        "FreqDist({('.', '.'): 139, ('the', 'DT'): 133, ('of', 'IN'): 112, ('shall', 'MD'): 98, (')', ')'): 92, ('be', 'VB'): 87, ('(', '('): 76, (',', ','): 73, ('in', 'IN'): 62, ('and', 'CC'): 60, ...})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2563,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2581,7 +2598,7 @@
        " ('MD', 117)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2798,12 +2815,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "pd.DataFrame(nouns).to_csv(\"output.csv\", header=None, index=None)"
+    "pd.DataFrame(nouns).to_csv(\"output - Get nouns - Single words.csv\", header=None, index=None)"
    ]
   }
  ],
