@veleda Script now output noun and tag in the CSV file. #1

--- a/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
+++ b/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
@@ -9,22 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting nltk\n",
-      "  Downloading nltk-3.5.zip (1.4 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.4 MB 820 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
-      "Requirement already satisfied: joblib in /opt/conda/lib/python3.8/site-packages (from nltk) (0.17.0)\n",
-      "Collecting regex\n",
-      "  Downloading regex-2020.11.13-cp38-cp38-manylinux2014_x86_64.whl (738 kB)\n",
-      "\u001b[K     |████████████████████████████████| 738 kB 800 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\n",
-      "Building wheels for collected packages: nltk\n",
-      "  Building wheel for nltk (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for nltk: filename=nltk-3.5-py3-none-any.whl size=1434674 sha256=bfd49ccbc6940a423289fb7d185989ec5db9213ddbacf05fc1bc9e47c38bcd00\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/ff/d5/7b/f1fb4e1e1603b2f01c2424dd60fbcc50c12ef918bafc44b155\n",
-      "Successfully built nltk\n",
-      "Installing collected packages: regex, nltk\n",
-      "Successfully installed nltk-3.5 regex-2020.11.13\n"
+      "Requirement already satisfied: nltk in /opt/conda/lib/python3.8/site-packages (3.5)\n",
+      "Requirement already satisfied: regex in /opt/conda/lib/python3.8/site-packages (from nltk) (2020.11.13)\n",
+      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\n",
+      "Requirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: joblib in /opt/conda/lib/python3.8/site-packages (from nltk) (0.17.0)\n"
      ]
     }
    ],
@@ -52,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +58,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package tagsets to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping help/tagsets.zip.\n"
+      "[nltk_data]   Package tagsets is already up-to-date!\n"
      ]
     },
     {
@@ -98,7 +87,8 @@
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
       "[nltk_data]     /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
      ]
     },
     {
@@ -272,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +495,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
@@ -1514,7 +1504,7 @@
        " ...]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2543,7 +2533,7 @@
        " ...]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2557,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2566,7 +2556,7 @@
        "FreqDist({('.', '.'): 139, ('the', 'DT'): 133, ('of', 'IN'): 112, ('shall', 'MD'): 98, (')', ')'): 92, ('be', 'VB'): 87, ('(', '('): 76, (',', ','): 73, ('in', 'IN'): 62, ('and', 'CC'): 60, ...})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2580,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2598,7 +2588,7 @@
        " ('MD', 117)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2612,196 +2602,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['oil',\n",
-       " 'material',\n",
-       " 'Section',\n",
-       " 'machinery',\n",
-       " 'power',\n",
-       " 'stove',\n",
-       " 'tank',\n",
-       " 'system',\n",
-       " 'accordance',\n",
-       " 'vessel',\n",
-       " 'space',\n",
-       " 'length',\n",
-       " 'deck',\n",
-       " 'fire',\n",
-       " 'supply',\n",
-       " 'cm',\n",
-       " 'emergency',\n",
-       " 'smoke',\n",
-       " 'pipe',\n",
-       " 'chapter',\n",
-       " 'construction',\n",
-       " 'fuel',\n",
-       " 'floor',\n",
-       " 'steel',\n",
-       " 'extinguisher',\n",
-       " 'time',\n",
-       " 'board',\n",
-       " 'b',\n",
-       " 'air',\n",
-       " 'regulation',\n",
-       " 'valve',\n",
-       " 'installation',\n",
-       " 'Insulation',\n",
-       " 'release',\n",
-       " 'type',\n",
-       " 'source',\n",
-       " 'force',\n",
-       " 'safety',\n",
-       " 'gas',\n",
-       " 'flame',\n",
-       " 'water',\n",
-       " 'engine',\n",
-       " 'alarm',\n",
-       " 'detector',\n",
-       " 'year',\n",
-       " 'outlet',\n",
-       " 'bench',\n",
-       " 'collection',\n",
-       " 'diameter',\n",
-       " 'thickness',\n",
-       " 'uptake',\n",
-       " 'bulkhead',\n",
-       " 'insulation',\n",
-       " 'Machinery',\n",
-       " 'medium',\n",
-       " 'space/locker',\n",
-       " 'heat',\n",
-       " 'Fire',\n",
-       " 'accommodation',\n",
-       " 'lighting',\n",
-       " 'protection',\n",
-       " 'failure',\n",
-       " 'shutoff',\n",
-       " 'height',\n",
-       " 'pressure',\n",
-       " 'use',\n",
-       " 'event',\n",
-       " 'filter',\n",
-       " 'inspection',\n",
-       " 'door',\n",
-       " 'cover',\n",
-       " 'order',\n",
-       " 'saucer',\n",
-       " 'rockwool',\n",
-       " 'twine',\n",
-       " 'ignition',\n",
-       " 'Oil',\n",
-       " 'sheet',\n",
-       " 'aluminium',\n",
-       " 'planking',\n",
-       " 'detection',\n",
-       " 'irrespective',\n",
-       " 'wheelhouse',\n",
-       " 'place',\n",
-       " 'basis',\n",
-       " 'bilge',\n",
-       " 'pursuant',\n",
-       " 'Scope',\n",
-       " 'application',\n",
-       " 'propane',\n",
-       " 'hydrocarbon',\n",
-       " 'observation',\n",
-       " 'hole',\n",
-       " 'consumption',\n",
-       " 'maximum',\n",
-       " 'difference',\n",
-       " 'reduction',\n",
-       " 'volume',\n",
-       " 'resetting',\n",
-       " 'function',\n",
-       " 'manufacturer',\n",
-       " 'Installation',\n",
-       " 'line',\n",
-       " 'separator',\n",
-       " 'plug',\n",
-       " 'regulator',\n",
-       " 'separation',\n",
-       " 'mud',\n",
-       " 'copper',\n",
-       " 'formation',\n",
-       " 'drain',\n",
-       " 'float',\n",
-       " 'Drainage',\n",
-       " 'water/mud',\n",
-       " 'cleaning',\n",
-       " 'operating',\n",
-       " 'company',\n",
-       " 'area',\n",
-       " 'fireplace',\n",
-       " 'front',\n",
-       " 'thick',\n",
-       " 'form',\n",
-       " 'metal',\n",
-       " 'circulation',\n",
-       " 'outer',\n",
-       " 'collar',\n",
-       " 'distance',\n",
-       " 'manifold',\n",
-       " 'exhaust',\n",
-       " 'effect',\n",
-       " 'fire-extinguishing',\n",
-       " 'aft',\n",
-       " 'edge',\n",
-       " 'compartment',\n",
-       " 'inside',\n",
-       " 'amount',\n",
-       " 'case',\n",
-       " 'size',\n",
-       " 'position',\n",
-       " 'equipment',\n",
-       " 'leak',\n",
-       " 'device',\n",
-       " 'entrance',\n",
-       " 'signal',\n",
-       " 'ventilation',\n",
-       " 'kg',\n",
-       " 'charge',\n",
-       " 'number',\n",
-       " 'cent',\n",
-       " 'date',\n",
-       " 'Ventilation',\n",
-       " 'Storage',\n",
-       " 'closing',\n",
-       " 'cock',\n",
-       " 'Test',\n",
-       " 'gauge',\n",
-       " 'glass',\n",
-       " 'drip',\n",
-       " 'room/locker',\n",
-       " 'ship',\n",
-       " 'seawater',\n",
-       " 'short',\n",
-       " 'waterline',\n",
-       " 'C6',\n",
-       " 'C9',\n",
-       " 'rudder',\n",
-       " 'propeller',\n",
-       " 'satisfy',\n",
-       " 'compliance',\n",
-       " 'sea',\n",
-       " 'navigation',\n",
-       " 'accumulator',\n",
-       " 'battery',\n",
-       " 'load',\n",
-       " 'paragraph',\n",
-       " 'voltage',\n",
-       " 'drop',\n",
-       " 'switchboard',\n",
-       " 'generator',\n",
-       " 'flashpoint',\n",
-       " 'trim']"
+       "[('oil', 'NN'),\n",
+       " ('material', 'NN'),\n",
+       " ('Section', 'NN'),\n",
+       " ('machinery', 'NN'),\n",
+       " ('power', 'NN'),\n",
+       " ('stove', 'NN'),\n",
+       " ('tank', 'NN'),\n",
+       " ('system', 'NN'),\n",
+       " ('accordance', 'NN'),\n",
+       " ('vessel', 'NN'),\n",
+       " ('space', 'NN'),\n",
+       " ('length', 'NN'),\n",
+       " ('deck', 'NN'),\n",
+       " ('fire', 'NN'),\n",
+       " ('supply', 'NN'),\n",
+       " ('cm', 'NN'),\n",
+       " ('emergency', 'NN'),\n",
+       " ('smoke', 'NN'),\n",
+       " ('pipe', 'NN'),\n",
+       " ('chapter', 'NN'),\n",
+       " ('construction', 'NN'),\n",
+       " ('fuel', 'NN'),\n",
+       " ('floor', 'NN'),\n",
+       " ('steel', 'NN'),\n",
+       " ('extinguisher', 'NN'),\n",
+       " ('time', 'NN'),\n",
+       " ('board', 'NN'),\n",
+       " ('b', 'NN'),\n",
+       " ('air', 'NN'),\n",
+       " ('regulation', 'NN'),\n",
+       " ('valve', 'NN'),\n",
+       " ('installation', 'NN'),\n",
+       " ('Insulation', 'NN'),\n",
+       " ('release', 'NN'),\n",
+       " ('type', 'NN'),\n",
+       " ('source', 'NN'),\n",
+       " ('force', 'NN'),\n",
+       " ('safety', 'NN'),\n",
+       " ('gas', 'NN'),\n",
+       " ('flame', 'NN'),\n",
+       " ('water', 'NN'),\n",
+       " ('engine', 'NN'),\n",
+       " ('alarm', 'NN'),\n",
+       " ('detector', 'NN'),\n",
+       " ('year', 'NN'),\n",
+       " ('outlet', 'NN'),\n",
+       " ('bench', 'NN'),\n",
+       " ('collection', 'NN'),\n",
+       " ('diameter', 'NN'),\n",
+       " ('thickness', 'NN'),\n",
+       " ('uptake', 'NN'),\n",
+       " ('bulkhead', 'NN'),\n",
+       " ('insulation', 'NN'),\n",
+       " ('Machinery', 'NN'),\n",
+       " ('medium', 'NN'),\n",
+       " ('space/locker', 'NN'),\n",
+       " ('heat', 'NN'),\n",
+       " ('Fire', 'NN'),\n",
+       " ('accommodation', 'NN'),\n",
+       " ('lighting', 'NN'),\n",
+       " ('protection', 'NN'),\n",
+       " ('failure', 'NN'),\n",
+       " ('shutoff', 'NN'),\n",
+       " ('height', 'NN'),\n",
+       " ('pressure', 'NN'),\n",
+       " ('use', 'NN'),\n",
+       " ('event', 'NN'),\n",
+       " ('filter', 'NN'),\n",
+       " ('inspection', 'NN'),\n",
+       " ('door', 'NN'),\n",
+       " ('cover', 'NN'),\n",
+       " ('order', 'NN'),\n",
+       " ('saucer', 'NN'),\n",
+       " ('rockwool', 'NN'),\n",
+       " ('twine', 'NN'),\n",
+       " ('ignition', 'NN'),\n",
+       " ('Oil', 'NN'),\n",
+       " ('sheet', 'NN'),\n",
+       " ('aluminium', 'NN'),\n",
+       " ('planking', 'NN'),\n",
+       " ('detection', 'NN'),\n",
+       " ('irrespective', 'NN'),\n",
+       " ('wheelhouse', 'NN'),\n",
+       " ('place', 'NN'),\n",
+       " ('basis', 'NN'),\n",
+       " ('bilge', 'NN'),\n",
+       " ('pursuant', 'NN'),\n",
+       " ('Scope', 'NN'),\n",
+       " ('application', 'NN'),\n",
+       " ('propane', 'NN'),\n",
+       " ('hydrocarbon', 'NN'),\n",
+       " ('observation', 'NN'),\n",
+       " ('hole', 'NN'),\n",
+       " ('consumption', 'NN'),\n",
+       " ('maximum', 'NN'),\n",
+       " ('difference', 'NN'),\n",
+       " ('reduction', 'NN'),\n",
+       " ('volume', 'NN'),\n",
+       " ('resetting', 'NN'),\n",
+       " ('function', 'NN'),\n",
+       " ('manufacturer', 'NN'),\n",
+       " ('Installation', 'NN'),\n",
+       " ('line', 'NN'),\n",
+       " ('separator', 'NN'),\n",
+       " ('plug', 'NN'),\n",
+       " ('regulator', 'NN'),\n",
+       " ('separation', 'NN'),\n",
+       " ('mud', 'NN'),\n",
+       " ('copper', 'NN'),\n",
+       " ('formation', 'NN'),\n",
+       " ('drain', 'NN'),\n",
+       " ('float', 'NN'),\n",
+       " ('Drainage', 'NN'),\n",
+       " ('water/mud', 'NN'),\n",
+       " ('cleaning', 'NN'),\n",
+       " ('operating', 'NN'),\n",
+       " ('company', 'NN'),\n",
+       " ('area', 'NN'),\n",
+       " ('fireplace', 'NN'),\n",
+       " ('front', 'NN'),\n",
+       " ('thick', 'NN'),\n",
+       " ('form', 'NN'),\n",
+       " ('metal', 'NN'),\n",
+       " ('circulation', 'NN'),\n",
+       " ('outer', 'NN'),\n",
+       " ('collar', 'NN'),\n",
+       " ('distance', 'NN'),\n",
+       " ('manifold', 'NN'),\n",
+       " ('exhaust', 'NN'),\n",
+       " ('effect', 'NN'),\n",
+       " ('fire-extinguishing', 'NN'),\n",
+       " ('aft', 'NN'),\n",
+       " ('edge', 'NN'),\n",
+       " ('compartment', 'NN'),\n",
+       " ('inside', 'NN'),\n",
+       " ('amount', 'NN'),\n",
+       " ('case', 'NN'),\n",
+       " ('size', 'NN'),\n",
+       " ('position', 'NN'),\n",
+       " ('equipment', 'NN'),\n",
+       " ('leak', 'NN'),\n",
+       " ('device', 'NN'),\n",
+       " ('entrance', 'NN'),\n",
+       " ('signal', 'NN'),\n",
+       " ('ventilation', 'NN'),\n",
+       " ('kg', 'NN'),\n",
+       " ('charge', 'NN'),\n",
+       " ('number', 'NN'),\n",
+       " ('cent', 'NN'),\n",
+       " ('date', 'NN'),\n",
+       " ('Ventilation', 'NN'),\n",
+       " ('Storage', 'NN'),\n",
+       " ('closing', 'NN'),\n",
+       " ('cock', 'NN'),\n",
+       " ('Test', 'NN'),\n",
+       " ('gauge', 'NN'),\n",
+       " ('glass', 'NN'),\n",
+       " ('drip', 'NN'),\n",
+       " ('room/locker', 'NN'),\n",
+       " ('ship', 'NN'),\n",
+       " ('seawater', 'NN'),\n",
+       " ('short', 'NN'),\n",
+       " ('waterline', 'NN'),\n",
+       " ('C6', 'NN'),\n",
+       " ('C9', 'NN'),\n",
+       " ('rudder', 'NN'),\n",
+       " ('propeller', 'NN'),\n",
+       " ('satisfy', 'NN'),\n",
+       " ('compliance', 'NN'),\n",
+       " ('sea', 'NN'),\n",
+       " ('navigation', 'NN'),\n",
+       " ('accumulator', 'NN'),\n",
+       " ('battery', 'NN'),\n",
+       " ('load', 'NN'),\n",
+       " ('paragraph', 'NN'),\n",
+       " ('voltage', 'NN'),\n",
+       " ('drop', 'NN'),\n",
+       " ('switchboard', 'NN'),\n",
+       " ('generator', 'NN'),\n",
+       " ('flashpoint', 'NN'),\n",
+       " ('trim', 'NN')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,18 +2799,32 @@
    "source": [
     "# List ut alle NN (som er det same som nouns / substantiv)\n",
     "\n",
-    "nouns = [word for (word, pos) in frequency_distribution if pos == 'NN']\n",
+    "# this will only list the nouns\n",
+    "#nouns = [word for (word, pos) in frequency_distribution if pos == 'NN']\n",
+    "\n",
+    "# this will list the words with their types\n",
+    "nouns = [(word, pos) for (word, pos) in frequency_distribution if pos == 'NN']\n",
+    "\n",
     "nouns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "pd.DataFrame(nouns).to_csv(\"output - Get nouns - Single words.csv\", header=None, index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO fjern bøying"
    ]
   }
  ],
