Lemmatizing the nouns. #1

--- a/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
+++ b/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
@@ -2810,21 +2810,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('oil', 'NN'),\n",
+       " ('material', 'NN'),\n",
+       " ('section', 'NN'),\n",
+       " ('machinery', 'NN'),\n",
+       " ('power', 'NN'),\n",
+       " ('stove', 'NN'),\n",
+       " ('tank', 'NN'),\n",
+       " ('system', 'NN'),\n",
+       " ('accordance', 'NN'),\n",
+       " ('vessel', 'NN'),\n",
+       " ('space', 'NN'),\n",
+       " ('length', 'NN'),\n",
+       " ('deck', 'NN'),\n",
+       " ('fire', 'NN'),\n",
+       " ('supply', 'NN'),\n",
+       " ('cm', 'NN'),\n",
+       " ('emergency', 'NN'),\n",
+       " ('smoke', 'NN'),\n",
+       " ('pipe', 'NN'),\n",
+       " ('chapter', 'NN'),\n",
+       " ('construction', 'NN'),\n",
+       " ('fuel', 'NN'),\n",
+       " ('floor', 'NN'),\n",
+       " ('steel', 'NN'),\n",
+       " ('extinguisher', 'NN'),\n",
+       " ('time', 'NN'),\n",
+       " ('board', 'NN'),\n",
+       " ('b', 'NN'),\n",
+       " ('air', 'NN'),\n",
+       " ('regulation', 'NN'),\n",
+       " ('valve', 'NN'),\n",
+       " ('installation', 'NN'),\n",
+       " ('insulation', 'NN'),\n",
+       " ('release', 'NN'),\n",
+       " ('type', 'NN'),\n",
+       " ('source', 'NN'),\n",
+       " ('force', 'NN'),\n",
+       " ('safety', 'NN'),\n",
+       " ('gas', 'NN'),\n",
+       " ('flame', 'NN'),\n",
+       " ('water', 'NN'),\n",
+       " ('engine', 'NN'),\n",
+       " ('alarm', 'NN'),\n",
+       " ('detector', 'NN'),\n",
+       " ('year', 'NN'),\n",
+       " ('outlet', 'NN'),\n",
+       " ('bench', 'NN'),\n",
+       " ('collection', 'NN'),\n",
+       " ('diameter', 'NN'),\n",
+       " ('thickness', 'NN'),\n",
+       " ('uptake', 'NN'),\n",
+       " ('bulkhead', 'NN'),\n",
+       " ('insulation', 'NN'),\n",
+       " ('machinery', 'NN'),\n",
+       " ('medium', 'NN'),\n",
+       " ('space/locker', 'NN'),\n",
+       " ('heat', 'NN'),\n",
+       " ('fire', 'NN'),\n",
+       " ('accommodation', 'NN'),\n",
+       " ('lighting', 'NN'),\n",
+       " ('protection', 'NN'),\n",
+       " ('failure', 'NN'),\n",
+       " ('shutoff', 'NN'),\n",
+       " ('height', 'NN'),\n",
+       " ('pressure', 'NN'),\n",
+       " ('use', 'NN'),\n",
+       " ('event', 'NN'),\n",
+       " ('filter', 'NN'),\n",
+       " ('inspection', 'NN'),\n",
+       " ('door', 'NN'),\n",
+       " ('cover', 'NN'),\n",
+       " ('order', 'NN'),\n",
+       " ('saucer', 'NN'),\n",
+       " ('rockwool', 'NN'),\n",
+       " ('twine', 'NN'),\n",
+       " ('ignition', 'NN'),\n",
+       " ('oil', 'NN'),\n",
+       " ('sheet', 'NN'),\n",
+       " ('aluminium', 'NN'),\n",
+       " ('planking', 'NN'),\n",
+       " ('detection', 'NN'),\n",
+       " ('irrespective', 'NN'),\n",
+       " ('wheelhouse', 'NN'),\n",
+       " ('place', 'NN'),\n",
+       " ('basis', 'NN'),\n",
+       " ('bilge', 'NN'),\n",
+       " ('pursuant', 'NN'),\n",
+       " ('scope', 'NN'),\n",
+       " ('application', 'NN'),\n",
+       " ('propane', 'NN'),\n",
+       " ('hydrocarbon', 'NN'),\n",
+       " ('observation', 'NN'),\n",
+       " ('hole', 'NN'),\n",
+       " ('consumption', 'NN'),\n",
+       " ('maximum', 'NN'),\n",
+       " ('difference', 'NN'),\n",
+       " ('reduction', 'NN'),\n",
+       " ('volume', 'NN'),\n",
+       " ('resetting', 'NN'),\n",
+       " ('function', 'NN'),\n",
+       " ('manufacturer', 'NN'),\n",
+       " ('installation', 'NN'),\n",
+       " ('line', 'NN'),\n",
+       " ('separator', 'NN'),\n",
+       " ('plug', 'NN'),\n",
+       " ('regulator', 'NN'),\n",
+       " ('separation', 'NN'),\n",
+       " ('mud', 'NN'),\n",
+       " ('copper', 'NN'),\n",
+       " ('formation', 'NN'),\n",
+       " ('drain', 'NN'),\n",
+       " ('float', 'NN'),\n",
+       " ('drainage', 'NN'),\n",
+       " ('water/mud', 'NN'),\n",
+       " ('cleaning', 'NN'),\n",
+       " ('operating', 'NN'),\n",
+       " ('company', 'NN'),\n",
+       " ('area', 'NN'),\n",
+       " ('fireplace', 'NN'),\n",
+       " ('front', 'NN'),\n",
+       " ('thick', 'NN'),\n",
+       " ('form', 'NN'),\n",
+       " ('metal', 'NN'),\n",
+       " ('circulation', 'NN'),\n",
+       " ('outer', 'NN'),\n",
+       " ('collar', 'NN'),\n",
+       " ('distance', 'NN'),\n",
+       " ('manifold', 'NN'),\n",
+       " ('exhaust', 'NN'),\n",
+       " ('effect', 'NN'),\n",
+       " ('fire-extinguishing', 'NN'),\n",
+       " ('aft', 'NN'),\n",
+       " ('edge', 'NN'),\n",
+       " ('compartment', 'NN'),\n",
+       " ('inside', 'NN'),\n",
+       " ('amount', 'NN'),\n",
+       " ('case', 'NN'),\n",
+       " ('size', 'NN'),\n",
+       " ('position', 'NN'),\n",
+       " ('equipment', 'NN'),\n",
+       " ('leak', 'NN'),\n",
+       " ('device', 'NN'),\n",
+       " ('entrance', 'NN'),\n",
+       " ('signal', 'NN'),\n",
+       " ('ventilation', 'NN'),\n",
+       " ('kg', 'NN'),\n",
+       " ('charge', 'NN'),\n",
+       " ('number', 'NN'),\n",
+       " ('cent', 'NN'),\n",
+       " ('date', 'NN'),\n",
+       " ('ventilation', 'NN'),\n",
+       " ('storage', 'NN'),\n",
+       " ('closing', 'NN'),\n",
+       " ('cock', 'NN'),\n",
+       " ('test', 'NN'),\n",
+       " ('gauge', 'NN'),\n",
+       " ('glass', 'NN'),\n",
+       " ('drip', 'NN'),\n",
+       " ('room/locker', 'NN'),\n",
+       " ('ship', 'NN'),\n",
+       " ('seawater', 'NN'),\n",
+       " ('short', 'NN'),\n",
+       " ('waterline', 'NN'),\n",
+       " ('c6', 'NN'),\n",
+       " ('c9', 'NN'),\n",
+       " ('rudder', 'NN'),\n",
+       " ('propeller', 'NN'),\n",
+       " ('satisfy', 'NN'),\n",
+       " ('compliance', 'NN'),\n",
+       " ('sea', 'NN'),\n",
+       " ('navigation', 'NN'),\n",
+       " ('accumulator', 'NN'),\n",
+       " ('battery', 'NN'),\n",
+       " ('load', 'NN'),\n",
+       " ('paragraph', 'NN'),\n",
+       " ('voltage', 'NN'),\n",
+       " ('drop', 'NN'),\n",
+       " ('switchboard', 'NN'),\n",
+       " ('generator', 'NN'),\n",
+       " ('flashpoint', 'NN'),\n",
+       " ('trim', 'NN')]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd \n",
-    "pd.DataFrame(nouns).to_csv(\"output - Get nouns - Single words.csv\", header=None, index=None)"
+    "#TODO fjern bøying\n",
+    "\n",
+    "# Ein lyt spessifisere kva ein bøyger. Derom ein vil bøyge noko anna enn substantiv kan ein ghere det sånn:\n",
+    "# https://stackoverflow.com/questions/15586721/wordnet-lemmatization-and-pos-tagging-in-python?noredirect=1&lq=1\n",
+    "\n",
+    "from nltk.corpus import wordnet\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "nltk.download('wordnet')\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "lemmatized_nouns = []\n",
+    "\n",
+    "for (noun, pos) in nouns:\n",
+    "    lemmatized_noun = lemmatizer.lemmatize(noun.lower(), wordnet.NOUN)\n",
+    "    #print(lemmatized_noun)\n",
+    "    lemmatized_nouns.append((lemmatized_noun, pos))\n",
+    "\n",
+    "lemmatized_nouns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO fjern bøying"
+    "import pandas as pd \n",
+    "pd.DataFrame(lemmatized_nouns).to_csv(\"output - Get nouns - Single words.csv\", header=None, index=None)"
    ]
   }
  ],
