Lemmatize double words. #1

--- a/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
+++ b/NLP Python Jupyter Notebooks/Get nouns - Single words/Get nouns - Single words.ipynb
@@ -3489,7 +3489,7 @@
     }
    ],
    "source": [
-    "#TODO fjern bøying\n",
+    "# fjern bøying\n",
     "\n",
     "# Ein lyt spessifisere kva ein bøyger. Derom ein vil bøyge noko anna enn substantiv kan ein ghere det sånn:\n",
     "# https://stackoverflow.com/questions/15586721/wordnet-lemmatization-and-pos-tagging-in-python?noredirect=1&lq=1\n",
